implemented all tabCompletes