@@ -15,6 +15,7 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 /**
@@ -116,7 +117,14 @@ public class PresetJoinSubCommand extends TabSubCommand {
     }
     
     @Override
-    public @Nullable List<String> onTabComplete(@NotNull CommandSender commandSender, @NotNull Command command, @NotNull String s, @NotNull String[] strings) {
-        return List.of();
+    public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
+        if (args.length == 1) {
+            return storageUtil.getPreset().getTeamIds();
+        }
+        if (args.length == 2) {
+            // this is intentional to allow default auto-completing of online players
+            return null;
+        }
+        return Collections.emptyList();
     }
 }
